src/scss/common/source.scss
.clipboardy-iframe-container {
  width: 100%;
  height: 0;
  position: relative;
  transition: visibility 0.4s, opacity 0.4s ease-in;
  visibility: visible;
  opacity: 1;
  &.clipboardy-hidden {
    opacity: 0;
    visibility: hidden;
    -webkit-transition-delay: 1.2s;
  }
  .clipboardy-iframe {
    position: absolute;
    width: 200px;
    height: 28px;
    top: -18px;
    right: 0;
    -webkit-user-select: none;
    z-index: 2;
  }
  &.clipboardy-buttons-layout-right {
    .clipboardy-iframe {
      width: 50px;
      height: 100px;
      top: 0;
      right: -35px;
    }
  }
}

*[data-source-id] {
  transition: opacity 0.2s ease-out;
  &.clipboardy-collapsed {
    opacity: 0.6;
    overflow: hidden !important;
    height: 60px !important;
  }
}

